--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,2 +1,14 @@
 @import "variables";
+@import "mixins";
 @import "resets";
+@import "layout";
+@import "header";
+
+@import "pagination";
+@import "button";
+@import "table";
+@import "modal";
+@import "form";
+@import "input";
+@import "label";
+@import "textarea";
