feat: add functionality to form with a nice validations

--- a/styles/_input.scss
+++ b/styles/_input.scss
@@ -22,4 +22,10 @@
 	&[type="number"]::-webkit-inner-spin-button {
 		display: none;
 	}
+
+	&--error {
+		color: $color-error !important;
+		border-color: $color-error !important;
+		box-shadow: 0 0 0 2px rgba($color-error, 0.16) !important;
+	}
 }
