feat: wrapping the app with instructions

--- a/styles/_button.scss
+++ b/styles/_button.scss
@@ -36,6 +36,16 @@
 			margin-left: -0.8rem;
 			margin-right: 0.8rem;
 		}
+
+		@include media(425px) {
+			& > svg {
+				margin: 0;
+			}
+
+			& > span {
+				display: none;
+			}
+		}
 	}
 
 	&__cancel {
