--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,6 +2,10 @@
 	font-weight: 500;
 	color: $accent-8;
 
+	@include media(425px) {
+		line-height: normal;
+	}
+
 	& > span {
 		font-weight: 700;
 	}
@@ -13,6 +17,10 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+
+	@include media(425px) {
+		padding: 1.6rem;
+	}
 
 	&::after {
 		content: "";
